[package]
name = "nuvs-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
reqwest = "0.9.18"
serde_json = "1.0.61"
serde = { version = "1.0.126", features = ["derive"] }


[[bin]]
name = "verification_service"
path = "src/verification_service.rs"

[[bin]]
name = "listening_service"
path = "src/listening_service.rs"
